--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ _site
 *~
 DSC*.jpg
 *full.jpg
+
+# Created by https://www.gitignore.io
+
+### vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
