--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 
 title: Humble Toolsmith
 
-url: http://pottereric.github.com
+url: http://http://humbletoolsmith.com
 
 permalink: /:year/:month/:day/:title/
 
